fix: improve pause message visibility

--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,7 @@
 
       <div id="pause-menu" class="hidden">
         <h2>Game Paused</h2>
-        <p id="pause-status" style="margin-bottom: 20px; font-style: italic; color: #aaa;"></p>
+        <p id="pause-status"></p>
         <button id="resume-btn">Resume</button>
         <button id="quit-btn" style="background-color: #d9534f;">Quit Game</button>
       </div>
