feat: add version footer

--- a/client/index.html
+++ b/client/index.html
@@ -52,6 +52,8 @@
       <div id="end-scores" class="scoreboard"></div>
       <button id="lobby-return-btn">Return to Lobby</button>
     </div>
+
+    <div id="version-footer">v<span id="game-version">1.0.0</span></div>
   </div>
   <script type="module" src="/src/main.js"></script>
 </body>
