chore: Rename game to Stick Rumble
- Updated client/index.html title and header
- Updated package.json name

--- a/client/index.html
+++ b/client/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Stickfighters</title>
+  <title>Stick Rumble</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <div id="app">
     <div id="join-screen">
-      <h1>Stickfighters</h1>
+      <h1>Stick Rumble</h1>
       <div id="join-inputs" style="display: flex; flex-direction: column; gap: 15px; width: 300px;">
         <input type="text" id="username" placeholder="Enter Nickname" maxlength="10">
         <input type="text" id="room-code" placeholder="4-Digit Room Code" maxlength="4"
