Add developer credit link

--- a/client/index.html
+++ b/client/index.html
@@ -91,6 +91,7 @@
     </div>
 
     <div id="version-footer">v<span id="game-version">1.0.0</span></div>
+    <a id="dev-credit" href="https://saliyadev.com" target="_blank">Dev: saliyadev.com</a>
   </div>
   <script type="module" src="/src/main.js"></script>
 </body>
