Implement mobile touch controls and responsive optimization

--- a/client/index.html
+++ b/client/index.html
@@ -82,6 +82,24 @@
       <div id="game-arena">
         <!-- Players rendered here -->
       </div>
+
+      <!-- Touch Controls (Mobile Only) -->
+      <div id="touch-controls" class="hidden">
+        <div id="d-pad">
+          <div class="d-pad-row">
+            <button id="btn-up" class="touch-btn">▲</button>
+          </div>
+          <div class="d-pad-row">
+            <button id="btn-left" class="touch-btn">◀</button>
+            <button id="btn-down" class="touch-btn">▼</button>
+            <button id="btn-right" class="touch-btn">▶</button>
+          </div>
+        </div>
+        <div id="action-buttons">
+          <button id="btn-kick" class="touch-btn action-btn" data-key="k">K</button>
+          <button id="btn-punch" class="touch-btn action-btn" data-key="j">J</button>
+        </div>
+      </div>
     </div>
 
     <div id="end-screen" class="hidden">
