Implement mobile landscape enforcement and auto-scaling

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,13 @@
 
 <body>
   <div id="app">
+    <!-- Orientation Lock Screen -->
+    <div id="orientation-lock">
+      <div class="rotate-icon">🔄</div>
+      <h2>Please Rotate Device</h2>
+      <p>This game is designed for landscape mode.</p>
+    </div>
+
     <div id="join-screen">
       <h1>Stick Rumble</h1>
       <div id="join-inputs" style="display: flex; flex-direction: column; gap: 15px; width: 300px;">
