Add PWA install instructions to orientation lock screen

--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,12 @@
       <div class="rotate-icon">🔄</div>
       <h2>Please Rotate Device</h2>
       <p>This game is designed for landscape mode.</p>
+
+      <div class="install-tip">
+        <p>✨ <strong>Install App for Best Experience</strong></p>
+        <p style="font-size: 0.8em; margin-top: 5px;">Tap <strong>⋮</strong> or <span style="font-size: 1.2em;">⎋</span>
+          (Share)<br>➤ <strong>Add to Home Screen</strong></p>
+      </div>
     </div>
 
     <div id="join-screen">
