Fix: Restore mobile touch controls visibility by removing hidden class

--- a/client/index.html
+++ b/client/index.html
@@ -100,7 +100,7 @@
       </div>
 
       <!-- Touch Controls (Mobile Only) -->
-      <div id="touch-controls" class="hidden">
+      <div id="touch-controls">
         <div id="d-pad">
           <div class="d-pad-row">
             <button id="btn-up" class="touch-btn">▲</button>
